After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 621083 - overview doesn't work, when nauitilus isn't draw desktop & any application run
overview doesn't work, when nauitilus isn't draw desktop & any application run
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Owen Taylor
gnome-shell-maint
Depends on: 621082
Blocks:
 
 
Reported: 2010-06-09 10:49 UTC by Maxim Ermilov
Modified: 2010-06-16 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
update GnomeShellPlugin according recent changes in MutterPlugin (15.99 KB, patch)
2010-06-10 16:18 UTC, Maxim Ermilov
committed Details | Review

Description Maxim Ermilov 2010-06-09 10:49:36 UTC
We use 'switch-workspace' signal of window_manager to detect workspace switch.
When there hasn't any window (including desktop window), signal doesn't emit.
Comment 1 drago01 2010-06-09 16:33:56 UTC
We (ab)use the switch-workspace callback that is supposed to be used for effects for this.

In mutter-plugin-manager.c:mutter_plugin_manager_switch_workspace we do:

---------
      if (!mutter_plugin_disabled (plugin) &&
          (mutter_plugin_features (plugin) & MUTTER_PLUGIN_SWITCH_WORKSPACE) &&
          (actors && *actors))
        {
---------

So when there are no windows (no desktop window and no other open application) the test "(actors && *actors)" fails so we never call klass->switch_workspace which in gnome-shell-plugin.c calls _shell_wm_switch_workspace and than shell-wm.c:_shell_wm_switch_workspace which is supposed to emit the signal.

We should probably use MetaScreen::workspace-switched instead for this purpose.
Comment 2 drago01 2010-06-09 19:10:36 UTC
For the record there is a mutter bug for this issue (which I did not notice):
https://bugzilla.gnome.org/show_bug.cgi?id=621082
Comment 3 drago01 2010-06-09 19:36:45 UTC
(In reply to comment #2)
> For the record there is a mutter bug for this issue (which I did not notice):
> https://bugzilla.gnome.org/show_bug.cgi?id=621082

Seems the bug is already marked as dependency so feel free to ignore both comments; sorry for the noise.
Comment 4 Maxim Ermilov 2010-06-10 16:18:02 UTC
Created attachment 163306 [details] [review]
update GnomeShellPlugin according recent changes in MutterPlugin
Comment 5 Owen Taylor 2010-06-16 20:53:31 UTC
Review of attachment 163306 [details] [review]:

Looks good to me. One trivial comment below. Also, in Subject, 'according recent changes' should be 'according to recent changes', and 'update' should have an initial capital u - 'Update'

::: src/shell-wm.c
@@ +20,3 @@
 enum
 {
+  KILL_WINDOW_EFFECTS,

Ordering is rather random here now, I'd move this down together with KILL_SWITCH_WORKSPACE

@@ +56,3 @@
   gobject_class->finalize = shell_wm_finalize;
 
+  shell_wm_signals[KILL_WINDOW_EFFECTS] =

Same ordering here