Update GnomeShellPlugin according to recent changes in MutterPlugin

https://bugzilla.gnome.org/show_bug.cgi?id=621083